@@ -12,7 +12,9 @@ import com.gregtechceu.gtceu.api.data.tag.TagPrefix;
 import com.gregtechceu.gtceu.api.item.IGTTool;
 import com.gregtechceu.gtceu.api.item.tool.aoe.AoESymmetrical;
 import com.gregtechceu.gtceu.api.machine.trait.NotifiableItemStackHandler;
+import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerList;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.recipe.RecipeHelper;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
 import com.gregtechceu.gtceu.api.recipe.ingredient.SizedIngredient;
 import com.gregtechceu.gtceu.api.transfer.item.CustomItemStackHandler;
@@ -34,7 +36,6 @@ import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.stats.Stat;
 import net.minecraft.stats.Stats;
-import net.minecraft.tags.BlockTags;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.LivingEntity;
@@ -64,8 +65,6 @@ import net.minecraftforge.event.ForgeEventFactory;
 
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
-import com.google.common.collect.Table;
-import com.google.common.collect.Tables;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -122,6 +121,7 @@ public class ToolHelper {
     public static final String TORCH_PLACING_KEY = "TorchPlacing";
     public static final String TORCH_PLACING_CACHE_SLOT_KEY = "TorchPlacing$Slot";
     public static final String TREE_FELLING_KEY = "TreeFelling";
+    public static final String DISABLE_TREE_FELLING_KEY = "DisableTreeFelling";
     public static final String DISABLE_SHIELDS_KEY = "DisableShields";
     public static final String RELOCATE_MINED_BLOCKS_KEY = "RelocateMinedBlocks";
     public static final String RELOCATE_MOB_DROPS_KEY = "RelocateMobDrops";
@@ -412,25 +412,27 @@ public class ToolHelper {
                 // Stack lists can be immutable going into Recipe#matches barring no rewrites
                 // Search for forge hammer recipes from all drops individually (only LV or under)
 
-                Table<IO, RecipeCapability<?>, List<IRecipeHandler<?>>> caps = Tables
-                        .newCustomTable(new EnumMap<>(IO.class), IdentityHashMap::new);
                 DummyMachineBlockEntity be = new DummyMachineBlockEntity(GTValues.LV,
-                        GTRecipeTypes.FORGE_HAMMER_RECIPES, GTMachineUtils.defaultTankSizeFunction, caps);
-                caps.put(IO.IN, EURecipeCapability.CAP, List.of(new InfiniteEnergyContainer(be.getMetaMachine(),
-                        GTValues.V[GTValues.LV], GTValues.V[GTValues.LV], 1, GTValues.V[GTValues.LV], 1)));
-                caps.put(IO.IN, ItemRecipeCapability.CAP, List.of(new NotifiableItemStackHandler(be.getMetaMachine(), 1,
-                        IO.IN, IO.IN, (slots) -> new CustomItemStackHandler(silktouchDrop))));
-                caps.put(IO.OUT, ItemRecipeCapability.CAP,
-                        List.of(new NotifiableItemStackHandler(be.getMetaMachine(), 2, IO.OUT)));
-                be.getMetaMachine().reinitializeCapabilities(caps);
+                        GTRecipeTypes.FORGE_HAMMER_RECIPES, GTMachineUtils.defaultTankSizeFunction,
+                        Collections.emptyList());
+                RecipeHandlerList dummyInputs = RecipeHandlerList.of(IO.IN,
+                        new InfiniteEnergyContainer(be.getMetaMachine(), GTValues.V[GTValues.LV],
+                                GTValues.V[GTValues.LV], 1, GTValues.V[GTValues.LV], 1),
+                        new NotifiableItemStackHandler(be.getMetaMachine(), 1, IO.IN, IO.IN,
+                                (slots) -> new CustomItemStackHandler(silktouchDrop)));
 
-                Iterator<GTRecipe> hammerRecipes = GTRecipeTypes.FORGE_HAMMER_RECIPES.searchRecipe(be.metaMachine);
-                GTRecipe hammerRecipe = hammerRecipes == null || !hammerRecipes.hasNext() ? null : hammerRecipes.next();
-                if (hammerRecipe != null && hammerRecipe.handleRecipeIO(IO.IN, be.metaMachine,
-                        be.getMetaMachine().recipeLogic.getChanceCaches())) {
+                RecipeHandlerList dummyOutputs = RecipeHandlerList.of(IO.OUT,
+                        new NotifiableItemStackHandler(be.getMetaMachine(), 2, IO.OUT));
+                be.getMetaMachine().reinitializeHandlers(List.of(dummyInputs, dummyOutputs));
+
+                Iterator<GTRecipe> hammerRecipes = GTRecipeTypes.FORGE_HAMMER_RECIPES.searchRecipe(be.metaMachine,
+                        r -> RecipeHelper.matchContents(be.metaMachine, r).isSuccess());
+                GTRecipe hammerRecipe = !hammerRecipes.hasNext() ? null : hammerRecipes.next();
+                if (hammerRecipe != null && RecipeHelper.handleRecipeIO(be.metaMachine, hammerRecipe, IO.IN,
+                        be.getMetaMachine().recipeLogic.getChanceCaches()).isSuccess()) {
                     drops.clear();
                     TagPrefix prefix = ChemicalHelper.getPrefix(silktouchDrop.getItem());
-                    if (prefix == null) {
+                    if (prefix.isEmpty()) {
                         for (Content output : hammerRecipe.getOutputContents(ItemRecipeCapability.CAP)) {
                             if (dropChance >= 1.0F || random.nextFloat() <= dropChance) {
                                 drops.add(SizedIngredient.copy(ItemRecipeCapability.CAP.of(output.content))
@@ -618,35 +620,8 @@ public class ToolHelper {
 
     // encompasses all vanilla special case tool checks for harvesting
     public static boolean isToolEffective(BlockState state, Set<GTToolType> toolClasses, int harvestLevel) {
-        Block block = state.getBlock();
         if (toolClasses.stream().anyMatch(type -> type.harvestTags.stream().anyMatch(state::is))) {
             return isCorrectTierForDrops(state, harvestLevel);
-        }
-
-        if (toolClasses.contains(GTToolType.PICKAXE)) {
-            if (Blocks.OBSIDIAN == block && harvestLevel >= 3) return true;
-            if (state.is(BlockTags.NEEDS_IRON_TOOL) && harvestLevel >= 2) return true;
-            if (state.is(BlockTags.NEEDS_STONE_TOOL) && harvestLevel >= 1) return true;
-            if (state.is(BlockTags.MINEABLE_WITH_PICKAXE)) return true;
-        }
-        if (toolClasses.contains(GTToolType.SHOVEL)) {
-            if (state.is(BlockTags.MINEABLE_WITH_SHOVEL)) return true;
-            if (block == Blocks.SNOW_BLOCK || block == Blocks.SNOW) return true;
-        }
-        if (toolClasses.contains(GTToolType.AXE)) {
-            if (state.is(BlockTags.MINEABLE_WITH_AXE)) return true;
-        }
-        if (toolClasses.contains(GTToolType.SWORD)) {
-            if (block instanceof WebBlock) return true;
-        }
-        if (toolClasses.contains(GTToolType.SCYTHE)) {}
-        if (toolClasses.contains(GTToolType.FILE)) {
-            if (block instanceof IronBarsBlock) {
-                return true;
-            }
-        }
-        if (toolClasses.contains(GTToolType.CROWBAR)) {
-            return block instanceof BaseRailBlock;
         }
         return false;
     }
